# Interview-homework

./: .gitignore  README.md  Task_Zaytsev_T.CPP  Task_Zaytsev_T.cc
CPP/: CMakeLists.txt  poligon.cpp  poligon.h
CPP/StarStaff/src/: CMakeLists.txt  main.cpp
CPP/StarStaff/src/moving_average/: CMakeLists.txt  MovingAverage.cpp  MovingAverage.h
CPP/StarStaff/src/sample_variance/: CMakeLists.txt  SampleVariance.cpp  SampleVariance.h
CPP/common_cpp/: CMakeLists.txt  RingBuffer.cpp  RingBuffer.h
CPP/kasper/: CMakeLists.txt  cod.cpp  cod.h
CPP/question_on_algorithms/: BST.cpp  CMakeLists.txt  dublicate_delete.cpp  sequential_units.cpp  str_reverce.cpp  strstr_rating.cpp
StarStaff/: CMakeLists.txt
StarStaff/src/: CMakeLists.txt  main.cpp
